third_party/move/move-compiler-v2/tests/recursive-instantiation-checker/v1-tests/recursive_one_arg_type_con.exp

Diagnostics:
error: cyclic type instantiation
  ┌─ tests/recursive-instantiation-checker/v1-tests/recursive_one_arg_type_con.move:6:9
  │
6 │     fun f<T>(x: T) {
  │         ^
  │
  = `f<T>` calls `f<M::S<T>>` at tests/recursive-instantiation-checker/v1-tests/recursive_one_arg_type_con.move:6,
    A cycle of recursive calls causes the instantiation to recurse infinitely.
